--- a/Frontend-masters-challenge/newbie/interactive-rating-component/index.html
+++ b/Frontend-masters-challenge/newbie/interactive-rating-component/index.html
@@ -25,7 +25,7 @@
     <!-- Rating state start -->
     <div class="container main">
       <div class="text-box">
-        <div class="rating">
+        <div class="round-box">
           <img src="images/icon-star.svg" alt="" />
         </div>
         <h2>How did we do?</h2>
